<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_action_update"
        android:icon="@drawable/icon"
        android:orderInCategory="1"
        android:title="@string/action_item_update"/>
    <item
        android:id="@+id/menu_action_list"
        android:icon="@drawable/icon"
        android:orderInCategory="2"
        android:title="@string/action_item_list"/>
    <item
        android:id="@+id/menu_action_feedback"
        android:icon="@drawable/icon"
        android:orderInCategory="3"
        android:title="@string/action_item_feedback"/>
    <item
        android:id="@+id/menu_action_about"
        android:icon="@drawable/icon"
        android:orderInCategory="4"
        android:title="@string/action_item_about"/>
    <item
        android:id="@+id/menu_action_quit"
        android:icon="@drawable/icon"
        android:orderInCategory="5"
        android:title="@string/action_item_quit"/>

</menu>